Fix event card text alignment

--- a/src/components/style/ProfileEventCard.scss
+++ b/src/components/style/ProfileEventCard.scss
@@ -16,6 +16,7 @@
 
   &-text {
     @include normal-text;
+    text-align: left;
 
     margin-left: 27px;
     & h1 {
